src/config/service/common/snapshots/roadster__config__service__common__address__tests__socket_addr@case_01.snap
---
source: src/config/service/common/address.rs
expression: addr
---
Err(
    Parse(
        Address(
            AddrParseError(
                Socket,
            ),
        ),
    ),
)
