src/config/service/common/snapshots/roadster__config__service__common__address__tests__url_with_scheme@case_01.snap
---
source: src/config/service/common/address.rs
expression: url
---
Ok(
    Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "localhost",
            ),
        ),
        port: Some(
            1234,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
)
