src/config/service/common/snapshots/roadster__config__service__common__address__tests__url_with_scheme@case_02.snap
---
source: src/config/service/common/address.rs
expression: url
---
Ok(
    Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv6(
                ::,
            ),
        ),
        port: Some(
            3000,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
)
